[package]
name = "snowdon"
version = "0.1.0"
authors = ["Archer <archer@nefarious.dev>"]
edition = "2021"
rust-version = "1.56.1"
description = "A lightweight thread-safe snowflake ID implementation for Rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["snowflake", "id", "lock-free", "lightweight"]
categories = ["concurrency", "web-programming"]

[dependencies]
serde = { version = "^1.0", features = ["derive"], optional = true }

[features]
default = ["blocking"]
lock-free = []
blocking = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
