[package]
name = "snowdon"
version = "0.1.0"
authors = ["Archer <archer@nefarious.dev>"]
edition = "2021"
rust-version = "1.56.1"
description = "A lightweight thread-safe snowflake ID implementation for Rust"
readme = "README.md"
repository = "https://github.com/archer-321/snowdon"
documentation = "https://docs.rs/snowdon"
license = "Apache-2.0"
keywords = ["snowflake", "id", "lock-free", "lightweight"]
categories = ["concurrency", "web-programming"]
exclude = ["/spin", "/.rustfmt-nightly.toml"]

[dependencies]
serde = { version = "^1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "^0.5"
lazy_static = "^1.4"
parking_lot = "^0.12"

[target.'cfg(loom)'.dependencies]
loom = "^0.5"

[features]
default = ["blocking"]
lock-free = []
blocking = []
# The `serde` feature is implicitly specified by the optional depencency

[[test]]
name = "loom_generator"
# Running this test requires `--cfg loom`, so we don't run it by default
test = false

[[bench]]
name = "simple_snowflake"
harness = false
required-features = ["blocking", "lock-free"]

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]
